--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Shared/_Layout.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <title>Microsoft Teams Hello World Sample App</title>
     @Styles.Render("~/Content/msteams-16.css")
+    @Styles.Render("~/Content/Custom.css")
     @Styles.Render("~/Content/Site.css")
     @Scripts.Render("https://unpkg.com/@microsoft/teams-js@1.3.4/dist/MicrosoftTeams.min.js")
 
